WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115685
Reproducible crash in RenderBoxModelObject::adjustedPositionRelativeToOffsetParent()
https://bugs.webkit.org/show_bug.cgi?id=115685
Summary
Reproducible crash in RenderBoxModelObject::adjustedPositionRelativeToOffsetP...
Beth Dakin
Reported
2013-05-06 17:17:29 PDT
This website crashes
http://www.hodinkee.com/blog/twixt-time-evaluate-the-accuracy-of-your-watch-right-on-your-iphone
0 com.apple.WebCore 0x00000001064c0797 WebCore::RenderBoxModelObject::adjustedPositionRelativeToOffsetParent(WebCore::LayoutPoint const&) const + 391 1 com.apple.WebCore 0x00000001064bd63f WebCore::RenderBox::offsetLeft() const + 111 2 com.apple.WebCore 0x0000000105b0ed6d WebCore::Element::offsetLeft() + 61 3 com.apple.WebCore 0x00000001062583ed WebCore::jsElementOffsetLeft(JSC::ExecState*, JSC::JSValue, This is a regression that was caused by
http://trac.webkit.org/changeset/147395
<
rdar://problem/13700734
>
Attachments
Patch
(7.54 KB, patch)
2013-05-06 17:30 PDT
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2013-05-06 17:30:13 PDT
Created
attachment 200858
[details]
Patch
Sam Weinig
Comment 2
2013-05-06 17:31:07 PDT
Comment on
attachment 200858
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=200858&action=review
> Source/WebCore/rendering/RenderObject.h:662 > + RenderBoxModelObject* offsetParent() const;
SPACE!!!!!
WebKit Commit Bot
Comment 3
2013-05-06 17:31:31 PDT
Attachment 200858
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/dom/Element.cpp', u'Source/WebCore/rendering/RenderBoxModelObject.cpp', u'Source/WebCore/rendering/RenderObject.cpp', u'Source/WebCore/rendering/RenderObject.h']" exit_code: 1 Source/WebCore/rendering/RenderObject.cpp:3011: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 4
2013-05-06 17:32:43 PDT
Thanks Sam!
http://trac.webkit.org/changeset/149653
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug